--- a/PROJETC++.vcxproj
+++ b/PROJETC++.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Categorie.cpp" />
     <ClCompile Include="CompositionChimique.cpp" />
+    <ClCompile Include="HygieneEtSoins.cpp" />
     <ClCompile Include="MaterielMedical.cpp" />
     <ClCompile Include="Produit.cpp" />
     <ClCompile Include="PROJETC++.cpp" />
@@ -137,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="Categorie.h" />
     <ClInclude Include="CompositionChimique.h" />
+    <ClInclude Include="HygieneEtSoins.h" />
     <ClInclude Include="MaterielMedical.h" />
     <ClInclude Include="Produit.h" />
     <ClInclude Include="Respiration.h" />
